Add containerization